# edge-lipsync-model

./: .gitignore  README.md  pyproject.toml
configs/: dataset.example.yaml  eval.example.yaml  silent_talking_dataset.example.yaml  train.example.yaml
docs/superpowers/plans/: 2026-05-31-duix-unet-finetune-pipeline-implementation.md  2026-05-31-huggingface-wandb-registry-implementation.md  2026-06-06-silent-talking-pose-paired-dataset-implementation.md  2026-06-11-huggingface-training-resume.md
docs/superpowers/specs/: 2026-05-31-duix-unet-finetune-pipeline-design.md  2026-05-31-huggingface-wandb-registry-design.md  (+5 more)
edge_lipsync/: audio_features.py  build_dataset.py  checkpoint.py  dataset.py  duix_detector.py  eval.py  grid_dataset.py  hf_datasets.py  hf_video_dataset.py  hub.py  identity.py  inference.py  landmarks.py  losses.py  metrics.py  model.py  onnx_runtime.py  parity.py  pose_pairing.py  preprocess.py  progress.py  silent_talking_dataset.py  sources.py  tracking.py  training.py
notebooks/: build_datasets.ipynb  training_dev.ipynb
tests/: test_audio_features.py  test_build_dataset.py  test_checkpoint.py  test_dataset.py  test_duix_detector.py  test_eval.py  test_grid_dataset.py  test_hf_datasets.py  test_hf_video_dataset.py  test_hub.py  test_identity.py  test_inference.py  test_losses.py  test_metrics.py  test_model.py  test_onnx_runtime.py  test_package.py  test_parity.py  test_pose_pairing.py  test_preprocess.py  test_progress.py  test_runtime_dependencies.py  test_silent_talking_dataset.py  test_silent_talking_integration.py  test_sources.py  test_tracking.py  test_training.py
tools/: build_dataset.py  build_grid_hf_dataset.py  build_hf_video_dataset.py  build_silent_talking_dataset.py  compare_duix_detector_bbox.py  compare_video_parity.py  export_checkpoint.py  hf_dataset.py  hf_model.py  hf_model_assets.py  infer_hf_dataset_sequence.py  infer_manifest_sample.py  infer_manifest_sequence.py  infer_video.py  render_eval.py  run_emma_parity.py  sweep_emma_roi_calibration.py  train.py
