[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-lipsync-model"
version = "0.1.0"
description = "Edge-oriented Duix UNet fine-tuning and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.8.5",
  "huggingface-hub>=1.17.0",
  "mediapipe>=0.10.14",
  "numpy>=1.26",
  "opencv-python>=4.8",
  "onnxruntime>=1.17",
  "pyyaml>=6.0",
  "torch>=2.2",
  "tqdm>=4.67",
  "wandb>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "pyright[dev]>=1.1.409"]
ncnn = ["ncnn==1.0.20260114"]

[tool.setuptools.packages.find]
include = ["edge_lipsync*"]

[tool.pyright]
include = ["edge_lipsync", "tools", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"edge_lipsync/model.py" = ["E501"]
